--- a/Project.toml
+++ b/Project.toml
@@ -3,9 +3,14 @@ uuid = "c976074e-2e5b-4ac6-9301-394412a2f0b0"
 authors = ["pvermees <p.vermeesch@ucl.ac.uk>"]
 version = "0.7.3"
 
+[compat]
+julia = "1.10-"
+CSV = "0.10.00-"
+DataFrames = "1.6.0-"
+Plots = "1.40.0-"
+
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
-Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
