--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,10 @@ authors = ["pvermees <p.vermeesch@ucl.ac.uk>"]
 version = "0.7.3"
 
 [compat]
-julia = ">1.9"
-CSV = ">0.10.0"
-DataFrames = ">1.6.0"
-Plots = ">1.40.0"
+julia = ">=1.9"
+CSV = ">=0.10"
+DataFrames = ">=1.6"
+Plots = ">=1.39"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
