--- a/Project.toml
+++ b/Project.toml
@@ -16,8 +16,11 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 [compat]
 CSV = "0.10.15"
 DataFrames = "1.7.0"
+Dates = "1.11.0"
+Infiltrator = "1.8.3"
 Optim = "1.9.4"
 Plots = "1.40.8"
+Printf = "1.11.0"
 Statistics = "1.11.1"
 
 [extras]
