--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Plasmatrace"
 uuid = "c976074e-2e5b-4ac6-9301-394412a2f0b0"
 authors = ["pvermees <p.vermeesch@ucl.ac.uk>"]
-version = "0.8.1"
+version = "0.9.0"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -14,10 +14,11 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
-julia = "1.10"
-Statistics = "1.10"
-Printf = "1.10"
 Dates = "1.10"
+Infiltrator = "1.8.3"
+Printf = "1.10"
+Statistics = "1.10"
+julia = "1.10"
 
 [extras]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
