--- a/Project.toml
+++ b/Project.toml
@@ -1,26 +1,30 @@
 name = "KJ"
 uuid = "c976074e-2e5b-4ac6-9301-394412a2f0b0"
 authors = ["pvermees <p.vermeesch@ucl.ac.uk>"]
-version = "0.3.0"
+version = "0.3.1"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 
 [compat]
+julia = "1.10"
+CSV = "0.10"
+DataFrames = "1.7"
 Dates = "1.10"
-Infiltrator = "1.8"
 LinearAlgebra = "1.10"
+Optim = "1.10"
+Plots = "1.40"
 Printf = "1.10"
 Statistics = "1.10"
-julia = "1.10"
+Infiltrator = "1.8"
 
 [extras]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
