--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 CSV = "0.10"
 DataFrames = "1.7"
 Dates = "1.10"
+Distributions = "0.25.118"
 Infiltrator = "1.8"
 LinearAlgebra = "1.10"
 Optim = "1.10"
