--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "KJ"
 uuid = "c976074e-2e5b-4ac6-9301-394412a2f0b0"
-version = "0.8.1"
+version = "0.8.2"
 authors = ["pvermees <p.vermeesch@ucl.ac.uk>"]
 
 [deps]
@@ -32,3 +32,4 @@ Optim = "2.0.0"
 Plots = "1.41.4"
 Printf = "1.11.0"
 Statistics = "1.11.1"
+julia = "1.10"
