--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ docs/site/
 # committed for packages, but should be committed for applications that require a static
 # environment.
 Manifest.toml
+
+# Julia coverage files
+*.jl.cov
+*.jl.*.cov
