--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
+Aqua = "0.8.14"
 CSV = "0.10.15"
 DataFrames = "1.8.1"
 Dates = "1.11.0"
@@ -31,5 +32,15 @@ LinearAlgebra = "1.12.0"
 Optim = "2.0.0"
 Plots = "1.41.4"
 Printf = "1.11.0"
+Random = "1.11.0"
 Statistics = "1.11.1"
+Test = "1.10"
 julia = "1.10"
+
+[extras]
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+
+[targets]
+test = ["Test", "Random", "Aqua"]
