--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -2,8 +2,8 @@
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 KJ = "c976074e-2e5b-4ac6-9301-394412a2f0b0"
 
+[sources]
+KJ = {path = "/home/pvermees/git/KJ.jl"}
+
 [compat]
 Documenter = "1"
-
-[sources]
-KJ = {path = ".."}
